feat: tema gris profesional, mejoras en visibilidad de sidebar y fix en dashboard
Mejoras implementadas:
- Actualizacion de paleta de colores a gris profesional (Slate/Gris Azulado).
- Mejora de visibilidad en modo oscuro para el sidebar (iconos y texto en blanco/gris claro).
- Fix en Dashboard de Inteligencia: correccion de consultas de agregacion MongoDB para DBRefs.
- Eliminacion de modulo de Solicitudes QR del sidebar, manteniendo boton QR en ejemplares.
- Limpieza de controladores y servicios obsoletos en el backend.